# Smart-Stuedent-Agent

./: .gitignore  main.py  pyproject.toml  requirements.txt
agents/: openrouter_agent.py
my_agents/: calculation_agent.py
